# 8zenith

./: README.md  package-lock.json  package.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
bot/: README.md  main.py  pyproject.toml  test_full_reading.py
bot/core/: llm.py  orchestrator.py
bot/data/benchmark/models/: registry.json
bot/data/benchmark/prompts/: 8zenith.json
bot/data/benchmark/questions/: qa.json
bot/data/benchmark/runs/: 20260612_033805.json  20260612_040021.jsonl  20260612_040521.jsonl  20260612_041123.jsonl  20260612_041817.jsonl  20260612_042039.jsonl  20260612_042235.jsonl  20260612_042345.jsonl  20260612_042505.jsonl  20260612_042739.jsonl  20260612_044312.jsonl  20260612_045214.jsonl
bot/data/knowledge/: bazi.md  intent.md  numbology.md  solver.md
bot/engines/: helper.py  integrator.py  observer.py  protector.py  seeker.py
bot/tools/: astro_calculate.py  astro_translate.py  base.py  math.py  registry.py
src/: app.html
src/lib/components/: AgentWorkspace.svelte  AiStreamAssistant.svelte  AnimatedIcons.svelte  ChatInputBar.svelte  Code.svelte  Math.svelte  RightPane.svelte  Sidemenu.svelte  ZenithLogo.svelte
src/lib/polyfills/: node-module.js
src/lib/utils/: astrology.ts  mathProblems.ts  projectManager.ts  zenithCore.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/astrology/: +page.svelte
src/routes/chat/: +page.svelte
src/routes/notebook/: +page.svelte
src/routes/numerology/: +page.svelte
web/8zenith-web/: AGENTS.md  README.md  package-lock.json  package.json
(+25 files in other folders)
