[project]
name = "8zenith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.109.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "groq>=1.4.0",
    "pyswisseph>=2.10.3.2",
    "requests>=2.34.2",
    "sympy>=1.14.0",
    "z3-solver>=4.16.0.0",
]
